hphp/hack/test/typecheck/reactive/owned_mutable15.php
<?hh // partial

// ERROR
<<__Rx>>
function f(<<__OwnedMutable, __MaybeMutable>> A $a) {
}
